fix dialog pop up transition lagging issue on mobile device

--- a/css/style.css
+++ b/css/style.css
@@ -70,10 +70,6 @@ div#title img{
     transition: transform 0.5s;
 }
 
-.display-result {
-    background-color: rgb(223, 17, 17);
-    
-}
 
 dialog#result-dialog {
     margin:auto auto;
@@ -82,7 +78,7 @@ dialog#result-dialog {
     background-color: rgb(49, 27, 78);
     border: 5px var(--button-color) solid;
     border-radius: 20px;
-    box-shadow: 1px 1px 1000px black;
+    
     text-align: center;
     will-change: all;
     transition: all 0.2s;
